# VoltDocs

./: .env.example  .gitignore  README.md  docker-compose.yml  fix_encoding.py  orig_blocks.json  package.json  trans_blocks.json
backend/: .env.example  Dockerfile  README.md  __init__.py  config.py  database.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
backend/auth/: cognito.py  middleware.py  routes.py  session.py
backend/routes/: convert.py  dashboard.py  files.py  glossary.py  health.py  quality.py  settings.py  templates.py  translation.py  users.py
backend/services/: access_control.py  bedrock.py  docx_exporter.py  docx_ir.py  docx_parser.py  docx_security.py  excel_exporter.py  excel_parser.py  glossary_matcher.py  md_exporter.py  md_parser.py  pandoc.py  pptx_exporter.py  pptx_parser.py  prompt.py  qa.py  qa_ai.py  qa_hybrid.py  qa_repair.py  qa_repair_ai.py  storage.py  tm.py  translation.py  translation_align.py
backend/services/docx/: __init__.py  fields.py  markup.py
backend/src/: config.ts  middleware.ts  server.ts
backend/src/db/: database.ts
backend/src/routes/: convert.ts  files.ts  glossary.ts  reviews.ts  (+2 more)
backend/tests/: test_bedrock.py  test_config.py  test_database.py  test_docx_exporter.py  test_docx_fields.py  test_docx_markup.py  test_excel_translation.py  test_invoke_bedrock.py  test_qa.py  test_qa_ai.py  test_qa_hybrid.py  test_qa_repair.py  test_qa_repair_ai.py  test_qa_repair_sanitize.py  test_tm.py  test_translation_align.py  test_translation_batching.py  test_translation_cleanup.py
(+71 files in other folders)
