[tool.poetry]
name = "voltdocs-backend"
version = "0.1.0"
description = "VoltDocs FastAPI backend"
authors = ["Zhiyuan Wang"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.115.0"
uvicorn = { version = "0.30.0", extras = ["standard"] }
python-dotenv = "1.0.0"
aiosqlite = "0.20.0"
httpx = "0.27.0"
python-multipart = "0.0.9"
python-docx = "1.1.2"
openpyxl = "3.1.5"
python-pptx = "1.0.2"
PyJWT = "2.9.0"
cryptography = "43.0.0"
boto3 = "1.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.1.1"
pytest-asyncio = "1.4.0"
pytest-anyio = "0.0.0"
pytest-cov = "7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
